Fixed arrow's z-index in Section component

--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -36,6 +36,7 @@
     margin-left: -13px;
     left: 50%;
     padding: 24.8px 0;
+    z-index: 99;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-tap-highlight-color: transparent;
 
